--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^6.4.3",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/react": "^13.4.0",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
