--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "gridfs-stream": "^1.1.1",
     "mongoose": "^8.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.9"
   }
 }
